--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,12 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Comments</h1>
+<h1>全てのコメント</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Come</th>
-      <th>Tname</th>
+      <th>コメント内容</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,7 +15,6 @@
       <tr>
         <td><%= comment.come %></td>
         <td><%= comment.Tname %></td>
-        <td><%= link_to 'Show', comment %></td>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
         <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -26,4 +24,3 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
