--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "スレッド一覧", '#', id: "logo" %>
+    <%= link_to "issue_app", '/', id: "logo" %>
     
   </div>
 </header>
